# synapse

./: .gitignore  .gitmodules  Dockerfile  README.md  Vagrantfile  build.sh
bdds/: 9ReEL8YeK4gL1gL.gv  bridge.bdd  bridge.c  bridge.gv  cl.bdd  cl.c  cl.gv  fw.bdd  fw.c  fw.gv  fwd.bdd  fwd.c  fwd.gv  gallium-fw.bdd  gallium-fw.c  gallium-fw.gv  gallium-lb.bdd  gallium-lb.gv  gallium-nat.bdd  gallium-nat.gv  gallium-proxy.bdd  gallium-proxy.gv  generate.sh  hhh.bdd  hhh.c  hhh.gv  lb.bdd  lb.c  lb.gv  nat.bdd  nat.c  nat.gv  nop.c  pol.bdd  pol.c  pol.gv  psd.bdd  psd.c  psd.gv  sbridge.bdd  (+2 more)
dpdk-nfs/: .gitignore  nf-util.h  nf.c
dpdk-nfs/adder/: adder_main.c
dpdk-nfs/gallium-proxy/: backend.h  cfg_parser.c  proxy_config.c
eval/: .gitignore  README.md  experiment.py  micro.py  paper_plots.py  plots.py  requirements.txt  sample_experiment_config.toml  set_constants.py  setup.sh  test.py
eval/data/: micro-cached-tables-0-cached-10ms-ttl-churn.csv  micro-cached-tables-0.05-cached-10ms-ttl-churn.csv  micro-cached-tables-0.25-cached-10ms-ttl-churn.csv  micro-cached-tables-0.5-cached-10ms-ttl-churn.csv  micro-cached-tables-0.75-cached-10ms-ttl-churn.csv  (+13 more)
eval/pktgen/: CMakeLists.txt  README.md  build.sh
eval/pktgen/cmake/: FindDPDK.cmake
eval/pktgen/src/: clock.cpp  cmdline.c  config.c  pktgen.cpp  pktgen.h  stats.cpp  tsc_clock.cpp  tsc_clock.h
setup/: sync-deps.sh
synthesized/: Cargo.toml  all_solutions_number_of_ops_and_pbss.csv  config.toml  num_ops_vs_optm_degree.csv  number_of_ops.py  run_times.csv  run_times_1.csv  runner.py
tfhe/: .gitignore  shell.nix
(+45 files in other folders)
